--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 body {
   background-color: lightblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 95vh;
+}
+
+h1 {
+  text-align: center;
 }
