--- a/src/style.css
+++ b/src/style.css
@@ -6,23 +6,26 @@ body {
   background-attachment: fixed;
   padding-top:100px;
   font-family: lato;
+  color: white;
 }
 .content
 {
   text-align:center;
+  vertical-align: center;
   background: rgba(0,0,0,0.3);
   max-width:80%;
   max-height:80%;
-  padding-top: 10%;
-  padding-bottom: 10%;
-  text-shadow: 0px 4px 3px rgba(0,0,0,4),
-				       0px 8px 13px rgba(0,0,0,1),
-				       0px 18px 23px rgba(0,0,0,1);
+  padding-top: 5%;
+  padding-bottom: 5%;
+  font-size: 1.1em;
 }
 h1{
   font-weight: 700;
   font-size: 3.5em;
   color: white;
+  text-shadow: 0px 4px 3px rgba(0,0,0,4),
+				       0px 8px 13px rgba(0,0,0,1),
+				       0px 18px 23px rgba(0,0,0,1);
 }
 hr
 {
