--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,28 @@
+*{
+  font-family: 'Courier New', Courier, monospace;
+}
 body {
-  background: url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
+  background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)) ,url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   padding-top:100px;
-  font-family: lato;
   color: black;
+  overflow: hidden;
 }
 .content
 {
+  box-shadow: 10px 10px 80px 10px #000000;
+  border: 0mm solid transparent;
+  border-radius: 30px;
   text-align:center;
   vertical-align: center;
   background: rgba(0,0,0,0.3);
   max-width:80%;
   max-height:80%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   font-size: 1.1em;
 }
 h1{
@@ -40,4 +46,38 @@ p
 button
 {
   color: black;
+}
+
+#verify_button{
+  border-radius: 20px;
+  padding:1%;
+  border:none;
+  transition:0.6s ease;
+}
+
+#verify_button:hover{
+  background-color: #00000042;
+  color:white;
+}
+
+#clickHere{
+  border-radius: 20px;
+  padding:1.5%;
+  border:none;
+  transition:0.6s ease;
+}
+
+#clickHere:hover{
+  background-color: #00000042;
+  color:white;
+}
+
+.output{
+  margin-left:40%;
+  margin-top:3%;
+  margin-bottom:2%;
+  background-color: #00000042;
+  padding:2%;
+  width:20%;
+  height:20%; 
 }
