--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
   font-family: 'Courier New', Courier, monospace;
 }
 body {
-  background-image:linear-gradient(rgba(255,255,0,0.8),rgba(0,0,0,0.8)) ,url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
+  background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)) ,url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -13,7 +13,7 @@ body {
 }
 .content
 {
-  box-shadow: 10px 10px 80px 10px #FF0000;
+  box-shadow: 10px 10px 80px 10px #00000042;
   border: 0mm solid transparent;
   border-radius: 30px;
   text-align:center;
@@ -30,8 +30,8 @@ h1{
   font-size: 3.5em;
   color: white;
   text-shadow: 0px 4px 3px rgba(0,0,0,4),
-				       0px 8px 13px rgba(255,0,0,1),
-				       0px 18px 23px rgba(255,0,0,1);
+				       0px 8px 13px rgba(0,0,0,1),
+				       0px 18px 23px rgba(0,0,0,1);
 }
 hr
 {
@@ -74,7 +74,7 @@ button
 }
 
 .output{
-  box-shadow: 3px 3px 24px 3px #FF0000;
+  box-shadow: 3px 3px 24px 3px #00000042;
   border: 0mm solid transparent;
   border-radius: 5px;
   margin-left:40%;
