--- a/src/style.css
+++ b/src/style.css
@@ -1,91 +1,89 @@
-*{
+* {
   font-family: 'Courier New', Courier, monospace;
 }
 body {
-  background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)) ,url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
   background-position: center;
   background-size: cover;
+  font-family: 'Rajdhani', sans-serif;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  padding-top:100px;
+  padding-top: 100px;
   color: black;
 }
-.content
-{
+.content {
   box-shadow: 10px 10px 80px 10px #00000042;
   border: 0mm solid transparent;
   border-radius: 30px;
-  text-align:center;
+  text-align: center;
   vertical-align: center;
-  background: rgba(0,0,0,0.3);
-  max-width:80%;
-  max-height:80%;
+  background: rgba(0, 0, 0, 0.3);
+  max-width: 80%;
+  max-height: 80%;
   padding-top: 2%;
   padding-bottom: 2%;
   font-size: 1.1em;
 }
-h1{
+h1 {
   font-weight: 700;
   font-size: 3.5em;
+  font-family: 'Grandstander', cursive;
   color: white;
-  text-shadow: 0px 4px 3px rgba(0,0,0,4),
-				       0px 8px 13px rgba(0,0,0,1),
-				       0px 18px 23px rgba(0,0,0,1);
+  text-shadow: 0px 4px 3px rgba(0, 0, 0, 4), 0px 8px 13px rgba(0, 0, 0, 1),
+    0px 18px 23px rgba(0, 0, 0, 1);
 }
-hr
-{
+hr {
   width: 400px;
-  max-width:80%;
-	border-top: 4px solid #f8f8f8;
+  max-width: 80%;
+  border-top: 4px solid #f8f8f8;
 }
-p
-{
+p {
   color: white;
 }
-button
-{
+button {
   color: black;
 }
 
-#verify_button{
+#verify_button {
   border-radius: 20px;
-  padding:1%;
-  border:none;
-  transition:0.6s ease;
+  padding: 10px 20px;
+  border: none;
+  transition: 0.6s ease-in-out;
 }
 
-#verify_button:hover{
-  background-color: #FF0000;
-  color:white;
+#verify_button:hover {
+  background-color: #ff0000;
+  color: white;
 }
 
-#clickHere{
+#clickHere {
   background-color: aliceblue;
   border-radius: 20px;
-  padding:1.5%;
-  border:none;
-  transition:0.6s ease;
+  padding: 1.5%;
+  border: none;
+  transition: 0.6s ease;
 }
 
-#clickHere:hover{
-  background-color: #FF0000;
-  color:white;
+#clickHere:hover {
+  background-color: #ff0000;
+  color: white;
 }
 
-.output{
+.output {
   box-shadow: 3px 3px 24px 3px #00000042;
   border: 0mm solid transparent;
   border-radius: 5px;
-  margin-left:40%;
-  margin-top:3%;
-  margin-bottom:2%;
+  margin-left: 40%;
+  margin-top: 3%;
+  margin-bottom: 2%;
   background-color: #00000042;
-  padding:2%;
-  width:20%;
-  height:20%; 
+  padding: 2%;
+  width: 20%;
+  height: 20%;
 }
 .info {
-  width:50%;
+  width: 50%;
   margin: auto;
   text-align: center;
 }
