--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
   font-family: 'Courier New', Courier, monospace;
 }
 body {
-  background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)) ,url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
+  background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)) ,url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -17,7 +17,7 @@ body {
   border-radius: 30px;
   text-align:center;
   vertical-align: center;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.4);
   max-width:80%;
   max-height:80%;
   padding-top: 2%;
@@ -26,7 +26,7 @@ body {
 }
 h1{
   font-weight: 700;
-  font-size: 3.5em;
+  font-size: 3.3em;
   color: white;
   text-shadow: 0px 4px 3px rgba(0,0,0,4),
 				       0px 8px 13px rgba(0,0,0,1),
@@ -34,9 +34,10 @@ h1{
 }
 hr
 {
-  width: 400px;
+  width: 600px;
   max-width:80%;
-	border-top: 4px solid #f8f8f8;
+  border-top: 4px solid #f8f8f8;
+  /* margin-bottom: 2rem; */
 }
 p
 {
@@ -48,20 +49,22 @@ button
 }
 
 #verify_button{
-  border-radius: 20px;
+  border-radius: 10px;
   padding:1%;
+  font-size: 3.5mm;
   border:none;
   transition:0.6s ease;
 }
 
 #verify_button:hover{
-  background-color: #FF0000;
+  background-color: darkslateblue;
   color:white;
 }
 
 #clickHere{
-  background-color: aliceblue;
-  border-radius: 20px;
+  background-color: teal;
+  border-radius: 10px;
+  color: #f8f8f8;
   padding:1.5%;
   border:none;
   transition:0.6s ease;
@@ -70,8 +73,8 @@ button
 #clickHere:hover{
   background-color: #FF0000;
   color:white;
+  text-decoration: none;
 }
-
 .output{
   box-shadow: 3px 3px 24px 3px #00000042;
   border: 0mm solid transparent;
@@ -79,13 +82,14 @@ button
   margin-left:40%;
   margin-top:3%;
   margin-bottom:2%;
-  background-color: #00000042;
+  background-color: #000000af;
   padding:2%;
   width:20%;
   height:20%; 
 }
 .info {
-  width:50%;
+  width:70%;
+  font-size: 4.5mm;
   margin: auto;
   text-align: center;
 }
