--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@
 }
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(http://africalegalnetwork.com/nigeria/wp-content/uploads/sites/19/2017/08/Banking.jpg);
+    url(../images/Banking.jpg);
   background-position: center;
   background-size: cover;
   font-family: 'Rajdhani', sans-serif;
