--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@
 }
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../images/Banking.jpg);
+    url(https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
   background-position: center;
   background-size: cover;
   font-family: 'Rajdhani', sans-serif;
