Added link to Luhn Algorithm

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,3 +90,10 @@ button {
   margin: auto;
   text-align: center;
 }
+#luhnlink {
+  text-decoration: none;
+  color: inherit;
+}
+caption {
+  padding: 5px 10px;
+}
