--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,9 +83,13 @@ button {
   padding: 2%;
   width: 20%;
   height: 20%;
+  display: none;
 }
 .info {
   width: 50%;
   margin: auto;
   text-align: center;
+}
+caption {
+  padding: 5px 10px;
 }
