--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,7 @@ body {
 h1 {
   font-weight: 700;
   font-size: 3.5em;
-  font-family: 'Grandstander', cursive;
+  font-family: 'Times New roman', cursive;
   color: white;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 4), 0px 8px 13px rgba(0, 0, 0, 1),
     0px 18px 23px rgba(0, 0, 0, 1);
