--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@
 }
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    url(https://bestanimations.com/media/water/1720002162mysterious-dark-water-waves.gif);
   background-position: center;
   background-size: cover;
   font-family: 'Rajdhani', sans-serif;
@@ -16,24 +16,25 @@ body {
 }
 .content {
   box-shadow: 10px 10px 80px 10px #00000042;
-  border: 0mm solid transparent;
+  border: transparent;
   border-radius: 30px;
   text-align: center;
   vertical-align: center;
-  background: rgba(0, 0, 0, 0.4);
+  background:transparent;
   max-width: 80%;
   max-height: 80%;
   padding-top: 2%;
   padding-bottom: 2%;
   font-size: 1.1em;
 }
+
 h1 {
   font-weight: 700;
   font-size: 3.5em;
-  font-family: 'Grandstander', cursive;
+  font-family: 'Times New Roman', cursive;
   color: white;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 4), 0px 8px 13px rgba(0, 0, 0, 1),
-    0px 18px 23px rgba(0, 0, 0, 1);
+  0px 18px 23px rgba(0, 0, 0, 1);
 }
 hr {
   width: 400px;
@@ -48,31 +49,47 @@ button {
 }
 
 #verify_button {
+  color: white;
+
   border-radius: 20px;
   padding: 10px 20px;
   border: none;
-  transition: 0.6s ease-in-out;
+  transition: 0.2s ease-in-out;
+  background-color: #606062;
 }
 
 #verify_button:hover {
-  background-color: #ff0000;
+  background-color: #808080;
   color: white;
+  transform: rotate(630deg);
 }
 
 #clickHere {
+  color: white;
+
   font-size: 18px;
-  background-color: aliceblue;
+  background-color: #606062;
   border-radius: 20px;
   padding: 1.5%;
   border: none;
-  transition: 0.6s ease;
+  transition: 0.2s ease-in-out;
 }
 
 #clickHere:hover {
-  background-color: #ff0000;
+  background-color: #808080;
   color: white;
+  transform: rotate(1840deg);
 }
 
+.back-video
+{
+  position: absolute;
+  right:0;
+  bottom:0;
+  z-index:-1;
+  min-width:100%;
+  min-height:100%;
+}
 .output {
   box-shadow: 3px 3px 24px 3px #00000042;
   border: 0mm solid transparent;
@@ -111,8 +128,20 @@ caption {
 
 .how-it-works-show{
   top: 50%;
-  left: 50% ;
+  left: 40% ;
   transform: translate(-50%, -50%) ;
+  
+}
+
+.close-popup
+{
+  animation: fade-in-out; 
+}
+
+.close-popup:hover
+{
+  transition: 0.6 fade-in-out;
+  transform: rotate(159deg);
 }
 
 
@@ -131,19 +160,24 @@ caption {
 .popup-flexwrapper > button{
   font-size: 3rem;
   margin: 50px;
-  background-color: aliceblue;
+  color: white;
+  background-color: #606062;
   border-radius: 20px;
   padding: 1.5%;
   border: none;
   transition: 0.6s ease;
 }
 .popup-flexwrapper > button:hover{
-  background-color: #ff0000;
+  background-color: #808080;
   color: white;
 }
 
 #check_value{
   border-radius: 20px;
   padding: 7px 20px;
+  transition: 0.6s ease-in-out;
 }
 
+#check_value.focus{
+  transform: rotate(780deg);
+}
