ladded dynamic background

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@
 }
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    url(https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNjE4YWIxYTE5NzlhNjc1OWQ3Y2NjNjY0MzdhY2JjODY1YThhZmZjMiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/rM0wxzvwsv5g4/giphy.gif);
   background-position: center;
   background-size: cover;
   font-family: 'Rajdhani', sans-serif;
